<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <TextView
            android:layout_width="350sp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_account_name"
            android:text="@string/example_account_name" android:textSize="24sp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp" android:layout_marginStart="16dp"/>
    <TextView
            android:text="@string/example_account_iban"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_account_iban"
            app:layout_constraintStart_toStartOf="@+id/tv_account_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_account_name"/>
    <TextView
            android:text="@string/example_account_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_account_balance" android:textSize="30sp"
            app:layout_constraintStart_toStartOf="@+id/tv_account_iban"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_account_currency"/>
    <TextView
            android:text="@string/example_account_currency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_account_currency" android:textSize="30sp"
            app:layout_constraintTop_toBottomOf="@+id/tv_account_iban"
            app:layout_constraintStart_toEndOf="@+id/tv_account_balance"/>
    <TextView
            android:text="@string/example_account_type"
            android:layout_width="80sp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_account_type"
            app:layout_constraintTop_toBottomOf="@+id/tv_account_name"
            app:layout_constraintEnd_toEndOf="@+id/tv_account_name"/>
</android.support.constraint.ConstraintLayout>